<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">OnyxPenDemo</string>
    <string name="brush">Brush</string>
    <string name="clear_note">Clear</string>
    <string name="eraser">Eraser</string>
    <string name="eraser_width">Eraser width</string>
    <string name="erase_track">Erasing Track</string>
    <string name="erase_track_area">Show lasso track</string>
    <string name="erase_track_move">Show move eraser track</string>
    <string name="erase_track_stroke">Show stroke eraser track</string>
    <string name="erase_track_app_layer_hint"> (app preview)</string>
    <string name="pen_up_refresh">Pen Up Refresh</string>
    <string name="color">Color</string>
    <string name="texture">Texture</string>
    <string name="line_width">Line width</string>

    <string name="fountain_pen">Pen</string>
    <string name="brush_pen">Brush Pen</string>
    <string name="ballpoint_pen">Ballpoint Pen</string>
    <string name="marker_pen">Marker</string>
    <string name="pencil">Pencil</string>

    <string name="black">Black</string>
    <string name="dark_gray_color">Gray</string>
    <string name="green">Green</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>

    <string name="texture_1">Texture One</string>
    <string name="texture_2">Texture Two</string>

    <string name="move_eraser">Move Eraser</string>
    <string name="area_eraser">Lasso Eraser</string>
    <string name="stroke_eraser">Stroke Eraser</string>

    <string name="ok">ok</string>
    <string name="test_title">This is a test tile</string>
    <string name="test_message">This is a test message.\nIn handwriting state, the screen will be locked. If the page view changed, you need to pause the handwriting first.</string>
</resources>