<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/func_container"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingHorizontal="10dp">

            <Button
                android:id="@+id/brush_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brush"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/brush_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true" />

            <TextView
                android:id="@+id/erase_button"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/eraser"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/erase_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:id="@+id/pen_up_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pen_up_refresh"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/pen_up_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <Button
                android:id="@+id/clear_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/clear_note"
                android:textColor="@android:color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:layout_toEndOf="@+id/func_container"
            android:background="@color/black" />

        <RelativeLayout
            android:id="@+id/surfaceView_root"
            android:layout_toEndOf="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <SurfaceView
                    android:id="@+id/surfaceView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </FrameLayout>

            <include
                android:layout_marginStart="100dp"
                android:layout_marginTop="20dp"
                android:id="@+id/float_menu_container"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                layout="@layout/layout_float_menu_vertical"/>

        </RelativeLayout>

    </RelativeLayout>

</layout>